<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CPAN Sidekick</string>
    <string name="button_search">Search</string>
    <string name="sample_module_name">Loading… - loading…</string>
    <string name="sample_module_name_only">Loading...</string>
    <string name="sample_module_abstract">loading...</string>
    <string name="sample_distribution">Loading...</string>
    <string name="favorite_not_favorited">++</string>
    <string name="activity_module_search_name">CPAN Module Search</string>
    <string name="dialog_searching_cpan">Searching CPAN&#8230;</string>
    <string name="item_load_more_from_cpan">Loading from CPAN&#8230;</string>
    <string name="activity_module_view">CPAN Module View</string>
    <string name="app_launcher_name">CPAN</string>
    <string name="not_yet_implemented">Not yet implemented.</string>
    <string name="default_ratings_0">0</string>
    <string name="app_version">0.5.0</string>
    <string name="menu_module_search">Search</string>
    <string name="module_view_placeholder_search_help">Use the search box to find CPAN modules.</string>
    <string name="module_view_placeholder_results_help">Click on one of the modules in the results to see its documentation.</string>
    <string name="sample_release_name">Test-More-0.98</string>
    <string name="sample_module_author_pauseid">MSCHWERN</string>
    <string name="sample_module_author_fullname">Michael G Schwern</string>
    <string name="sample_release_metadata">License: Perl_5</string>
    <string name="cannot_connect_to_metacpan">Cannot connect to MetaCPAN. Please make sure your device is connected to the network.</string>
    <string name="activity_release_view">CPAN Release View</string>
    <string name="preference_about">About</string>
    <string name="text_version">Version</string>
    <string name="about_copyright">© 2012 Qubling Software</string>
    <string name="about_report_a_bug">&lt;u&gt;Report a bug&lt;/u&gt;</string>
    <string name="about_report_a_bug_more">If you find a problem, please report it.</string>
    <string name="about_special_thanks">Special Thanks to the MetaCPAN team. This application would not be possible without them.</string>
    <string name="about_metacpan">&lt;u&gt;About MetaCPAN&lt;/u&gt;</string>
    <string name="error_no_accounts_to_pick_title">No Accounts Found</string>
    <string name="error_no_accounts_to_pick">No accounts found on your device for Facebook, Twitter, or Github. To use the sign in feature of CPAN Sidekick you must install the official Facebook or Twitter or Github application and configure an account.</string>
    <string name="dialog_select_account">Choose an Account</string>
    <string name="sample_account_name">Account Name (Account Type)</string>
</resources>
