<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ModuleItem"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/module_view_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:orientation="horizontal"
        android:padding="10dp" >

        <QuickContactBadge
            android:id="@+id/module_author_avatar"
            android:layout_width="35dp"
            android:layout_height="35dp" />

        <LinearLayout
            android:id="@+id/ModuleDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp" >

            <RelativeLayout
                android:id="@+id/ModuleTopDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/module_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/module_release_favorite"
                    android:minWidth="40dp"
                    android:paddingRight="3dp"
                    android:singleLine="true"
                    android:text="@string/sample_module_name"
                    android:textSize="18dp" />

                <Button
                    android:id="@+id/module_release_favorite"
                    style="@style/NotFavoritedButton"
                    android:layout_width="35dp"
                    android:layout_height="22dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:gravity="center_vertical|right"
                    android:text="@string/favorite_not_favorited"
                    android:textSize="8dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ModuleBottomDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/module_author_distribution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/RatingDetails"
                    android:paddingRight="3dp"
                    android:singleLine="true"
                    android:text="@string/sample_distribution"
                    android:textSize="12dp" />

                <LinearLayout
                    android:id="@+id/RatingDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:orientation="horizontal" >

                    <RatingBar
                        android:id="@+id/module_release_rating"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:max="5" />

                    <TextView
                        android:id="@+id/module_release_rating_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android.textSize="12dp"
                        android:paddingLeft="5dp"
                        android:text="0"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="12dp" />

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/MainBody"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <FrameLayout
            android:id="@+id/ModuleWebView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <WebView
                android:id="@+id/module_pod"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>

        <View
            android:id="@+id/DropShadow"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:background="@drawable/header_shadow" />

    </FrameLayout>

</LinearLayout>